--- a/src/app/navigation/footer/footer.component.scss
+++ b/src/app/navigation/footer/footer.component.scss
@@ -1,28 +1,28 @@
-.footContainer{
+.footContainer {
   display: flex;
-  justify-content: space-between;
-  position: absolute;
+  position: sticky;
   bottom: 0;
   width: 100%;
+  z-index: 1;
 }
 
-.links{
+.links {
   display: flex;
   flex-wrap: wrap;
   font-size: 0.65em;
 }
 
-.copyright{
+.copyright {
   display: flex;
   flex-wrap: wrap;
   text-align: end;
 }
 
-img{
-max-width: 1em;
+img {
+  max-width: 1em;
 }
 
-a{
-  color:white;
+a {
+  color: white;
   text-decoration: none;
 }
